# Ecommerce-Analysis

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  analysis.py  clean_data.py  docker-compose.yml  powerbi_setup.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
output/: date_dimension.parquet  online_retail_cleaned.parquet  online_retail_returns.parquet  rfm_table.parquet
report/: executive_summary.md
tests/: __init__.py  test_analysis.py  test_clean_data.py
